--- a/Horario/Horario.WebUI/Views/Dica/List.cshtml
+++ b/Horario/Horario.WebUI/Views/Dica/List.cshtml
@@ -12,6 +12,7 @@
             <span class="pull-right label label-primary">@dica.Fname@dica.Lname</span>
         </h3>
         <span class="lead">@dica.email</span>
+        <center><a style="color:black" href="#" class="btn btn-primary btn-lg" role="button">Ver Horario</a></center>
     </div>
 }
 
