--- a/Horario/Horario.WebUI/Views/Shared/_Layout.cshtml
+++ b/Horario/Horario.WebUI/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="navbar navbar-inverse" role="navigation">
-        <a class="navbar-brand" href="#">CitaTec</a>
+        <a class="navbar-brand" href="~/Inicio.aspx">CitaTec</a>
     </div>
     <div class="row panel">
         <div id="categories" class="col-xs-3">
