--- a/Horario/Horario.WebUI/Views/Dica/List.cshtml
+++ b/Horario/Horario.WebUI/Views/Dica/List.cshtml
@@ -12,7 +12,11 @@
             <span class="pull-right label label-primary">@dica.Fname@dica.Lname</span>
         </h3>
         <span class="lead">@dica.email</span>
-        <center><a style="color:black" href="/Cita/Index" class="btn btn-primary btn-lg" role="button">Ver Horario</a></center>
+        <div>
+            <center><a style="color:black" href="#" class="btn btn-primary btn-lg" role="button">Ver Horario</a></center>
+            <div><br /></div>
+            <center><a style="color:black" href="/Cita/Index" class="btn btn-primary btn-lg" role="button">Citas</a></center>
+        </div>
     </div>
 }
 
