--- a/Horario/Horario.WebUI/Views/Cita/Edit.cshtml
+++ b/Horario/Horario.WebUI/Views/Cita/Edit.cshtml
@@ -1,26 +1,9 @@
-﻿@model Horario.Domain.Entities.Cita
+﻿@model Horario.WebUI.Models.DicaViewModel
+
 @{
-    ViewBag.Title = "Edit " + Model.Folio;
-    Layout = "~/Views/Shared/_CitasLayout.cshtml";
+    ViewBag.Title = "Crear cita";
 }
 
+<h1>Crear Cita con: "Nombre del dica" (implementar en controller)</h1>
+}
 
-<div class="panel">
-    <div class="panel-heading">
-        <h3>Editar @Model.Folio</h3>
-    </div>
-
-    @using (Html.BeginForm())
-    {
-        <div class="panel-body">
-            @Html.HiddenFor(c => c.Folio)
-            @Html.TextArea("Folio", null, new { @class = "form-control", rows = 5 })
-        </div>
-        <div class="panel-footer">
-            <input type="submit" value="Save" class="btn btn-primary" />
-            @Html.ActionLink("Cancelar y regresar", "Index", null, new { @class = "btn btn-default" })
-        </div>
-
-    }
-
-</div>
