--- a/Horario/Horario.WebUI/Views/Cita/List.cshtml
+++ b/Horario/Horario.WebUI/Views/Cita/List.cshtml
@@ -1,28 +1,26 @@
-﻿@model Horario.Domain.Concrete.EFDicaRepository
+﻿@model Horario.Domain.Concrete.EFCitaRepository
 
 @{
-    ViewBag.Title = "Directores de Carrera";
+    ViewBag.Title = "Lo que hizo vane";
 }
 
-@foreach (var dica in Model.Dicas)
+
+@foreach (var cita in Model.Citas)
 {
     <div class="well">
         <h3>
-            <strong>@dica.Nomina</strong>
-            <span class="pull-right label label-primary">@dica.Fname@dica.Lname</span>
+            <strong>@cita.Folio</strong>
+            <span class="pull-right label label-primary">Algo</span>
         </h3>
-        <span class="lead">@dica.email</span>
+        <span class="lead"></span>
         <div>
             <div class="row">
                 <div class="col-lg-2"><center><a style="color:black" href="#" class="btn btn-primary btn-lg" role="button">Ver Horario</a></center></div>
                 <div class="col-lg-1"><center><a style="color:black" href="/Cita/Index" class="btn btn-primary btn-lg" role="button">Ver Citas</a></center></div>
             </div>
-            <div><br /></div>      
-            
+            <div><br /></div>
+
         </div>
     </div>
 }
-
-
-
 
