--- a/Horario/Horario.WebUI/Views/ViewCitas/Index.cshtml
+++ b/Horario/Horario.WebUI/Views/ViewCitas/Index.cshtml
@@ -5,7 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";    
 
 }
-
+<div>
+    <h2>@Html.ActionLink("Crear citas", "Create", new { @class = "btn btn-default" })</h2>
+</div>
 @foreach (var dica in Model.Dicas)
 {
     <div class="well">
@@ -21,8 +23,8 @@
         <p>@dica.Nomina</p>
                <div>
             <div class="row">
-                <div class="col-lg-2"><center><a style="color:black" href="#" class="btn btn-primary btn-lg" role="button">Ver Horario</a></center></div>
-                <div class="col-lg-1"><center><a style="color:black" href="/Cita/Index" class="btn btn-primary btn-lg" role="button">Ver Citas</a></center></div>
+              <h3> @Html.ActionLink("Ver Horario", "Citas", new { nomina = dica.Nomina })</h3>
+             
             </div>
             <div><br /></div>
 
