--- a/Horario/Horario.WebUI/Views/ViewCitas/Index.cshtml
+++ b/Horario/Horario.WebUI/Views/ViewCitas/Index.cshtml
@@ -6,6 +6,7 @@
 
 }
 <div>
+    <a class="btn btn-default" href="/Persona/Edit">Registrar</a>
     <h2>@Html.ActionLink("Crear citas", "Create", new { @class = "btn btn-default" })</h2>
 </div>
 @foreach (var dica in Model.Dicas)
