--- a/Horario/Horario.WebUI/Views/Persona/Edit.cshtml
+++ b/Horario/Horario.WebUI/Views/Persona/Edit.cshtml
@@ -20,7 +20,7 @@
         </div>
         <div class="panel-footer">
             <input type="submit" value="Save" class="btn btn-primary" />
-            @Html.ActionLink("Cancelar y regresar", "Index", null, new { @class = "btn btn-default" })
+            @Html.ActionLink("Cancelar y regresar", "ViewCitas/Index", null, new { @class = "btn btn-default" })
         </div>
 
     }
