--- a/Horario/Horario.WebUI/Views/ViewCitas/Citas.cshtml
+++ b/Horario/Horario.WebUI/Views/ViewCitas/Citas.cshtml
@@ -1,79 +1,131 @@
-﻿@model IEnumerable<Horario.Domain.Entities.Cita>
+﻿@model Horario.Domain.Concrete.SemanaCitas
 @using MvcSchedule;
 @using MvcSchedule.Objects;
-    @{
-        ViewBag.Title = "Citas";
 
-    }
-    
- <!--   <div>
-    Html.ScheduleCalendarFor(Model,
-                             m => m.Hora_Inicio,
-                             m => m.Hora_Fin,
-                             m => m.Fecha,
-                             m => "Cita",
-                             new MvcScheduleCalendarOptions
-                             {
-                                 Layout = LayoutEnum.Vertical,
-                                 ItemCss = "item"
-                             },
-                             t => ((DateTime)t).ToString("hh:mm"),
-                             d => ((DateTime)d).ToString("dd/MM"))
-    </div> -->
+
+@{
+    ViewBag.Title = "Horario";
+
+}
+
 <div>
+
+</div>
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h3>Horario </h3>
+    </div>
+
+    <div class="panel-body">
         <table class="table table-striped table-condensed table-bordered">
+
             <tr>
-                <th class="text-right"></th>
-                <th class="text-right">Lunes</th>
-                <th class="text-right">Martes</th>
-                <th class="text-right">Miercoles</th>
-                <th class="text-right">Jueves</th>
-                <th class="text-right">Viernes</th>
+                <th class="text-right">@Model.Titulo.Mes</th>
+                <th class="text-right">@Model.Titulo.Dia1</th>
+                <th class="text-right">@Model.Titulo.Dia2</th>
+                <th class="text-right">@Model.Titulo.Dia3</th>
+                <th class="text-right">@Model.Titulo.Dia4</th>
+                <th class="text-right">@Model.Titulo.Dia5</th>
+                <th class="text-right">@Model.Titulo.Dia6</th>
+                <th class="text-right">@Model.Titulo.Dia7</th>
             </tr>
-            <tr><td>09:00</td></tr>
-            <tr><td>10:00</td></tr>
-            <tr><td>11:00</td></tr>
-            <tr><td>12:00</td></tr>
-            <tr><td>13:00</td></tr>
-            <tr><td>14:00</td></tr>
-            <tr><td>15:00</td></tr>
-            <tr><td>16:00</td></tr>
-            <tr><td>17:00</td></tr>
-            </table>
+            <tr>
+                <td class="text-right">@Model.Hora9.Mes</td>
+                <td class="text-right">@Model.Hora9.Dia1</td>
+                <td class="text-right">@Model.Hora9.Dia2</td>
+                <td class="text-right">@Model.Hora9.Dia3</td>
+                <td class="text-right">@Model.Hora9.Dia4</td>
+                <td class="text-right">@Model.Hora9.Dia5</td>
+                <td class="text-right">@Model.Hora9.Dia6</td>
+                <td class="text-right">@Model.Hora9.Dia7</td>
+            </tr>
+            <tr>
+                <td class="text-right">@Model.Hora10.Mes</td>
+                <td class="text-right">@Model.Hora10.Dia1</td>
+                <td class="text-right">@Model.Hora10.Dia2</td>
+                <td class="text-right">@Model.Hora10.Dia3</td>
+                <td class="text-right">@Model.Hora10.Dia4</td>
+                <td class="text-right">@Model.Hora10.Dia5</td>
+                <td class="text-right">@Model.Hora10.Dia6</td>
+                <td class="text-right">@Model.Hora10.Dia7</td>
+            </tr>
+            <tr>
+                <td class="text-right">@Model.Hora11.Mes</td>
+                <td class="text-right">@Model.Hora11.Dia1</td>
+                <td class="text-right">@Model.Hora11.Dia2</td>
+                <td class="text-right">@Model.Hora11.Dia3</td>
+                <td class="text-right">@Model.Hora11.Dia4</td>
+                <td class="text-right">@Model.Hora11.Dia5</td>
+                <td class="text-right">@Model.Hora11.Dia6</td>
+                <td class="text-right">@Model.Hora11.Dia7</td>
+            </tr>
+            <tr>
+                <td class="text-right">@Model.Hora12.Mes</td>
+                <td class="text-right">@Model.Hora12.Dia1</td>
+                <td class="text-right">@Model.Hora12.Dia2</td>
+                <td class="text-right">@Model.Hora12.Dia3</td>
+                <td class="text-right">@Model.Hora12.Dia4</td>
+                <td class="text-right">@Model.Hora12.Dia5</td>
+                <td class="text-right">@Model.Hora12.Dia6</td>
+                <td class="text-right">@Model.Hora12.Dia7</td>
+            </tr>
+            <tr>
+                <td class="text-right">@Model.Hora1.Mes</td>
+                <td class="text-right">@Model.Hora1.Dia1</td>
+                <td class="text-right">@Model.Hora1.Dia2</td>
+                <td class="text-right">@Model.Hora1.Dia3</td>
+                <td class="text-right">@Model.Hora1.Dia4</td>
+                <td class="text-right">@Model.Hora1.Dia5</td>
+                <td class="text-right">@Model.Hora1.Dia6</td>
+                <td class="text-right">@Model.Hora1.Dia7</td>
+            </tr>
+            <tr>
+                <td class="text-right">@Model.Hora2.Mes</td>
+                <td class="text-right">@Model.Hora2.Dia1</td>
+                <td class="text-right">@Model.Hora2.Dia2</td>
+                <td class="text-right">@Model.Hora2.Dia3</td>
+                <td class="text-right">@Model.Hora2.Dia4</td>
+                <td class="text-right">@Model.Hora2.Dia5</td>
+                <td class="text-right">@Model.Hora2.Dia6</td>
+                <td class="text-right">@Model.Hora2.Dia7</td>
+            </tr>
+            <tr>
+                <td class="text-right">@Model.Hora3.Mes</td>
+                <td class="text-right">@Model.Hora3.Dia1</td>
+                <td class="text-right">@Model.Hora3.Dia2</td>
+                <td class="text-right">@Model.Hora3.Dia3</td>
+                <td class="text-right">@Model.Hora3.Dia4</td>
+                <td class="text-right">@Model.Hora3.Dia5</td>
+                <td class="text-right">@Model.Hora3.Dia6</td>
+                <td class="text-right">@Model.Hora3.Dia7</td>
+            </tr>
+            <tr>
+                <td class="text-right">@Model.Hora4.Mes</td>
+                <td class="text-right">@Model.Hora4.Dia1</td>
+                <td class="text-right">@Model.Hora4.Dia2</td>
+                <td class="text-right">@Model.Hora4.Dia3</td>
+                <td class="text-right">@Model.Hora4.Dia4</td>
+                <td class="text-right">@Model.Hora4.Dia5</td>
+                <td class="text-right">@Model.Hora4.Dia6</td>
+                <td class="text-right">@Model.Hora4.Dia7</td>
+            </tr>
+            <!--
+                  @*foreach (var cita in Model)
+              {
+                      <tr>
+                          <td class="text-right">@cita.Folio</td>
+                          <td class="text-right">@cita.Fecha.ToShortDateString()</td>
+                          <td class="text-right">@cita.Hora_Inicio</td>
+                          <td class="text-right">Cita con  @cita</td>*@
+
+                      </tr>
+                  }-->
+        </table>
     </div>
 
+    <div class="panel-footer">
 
-
-
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h3>Registro de citas</h3>
-        </div>
-
-        <div class="panel-body">
-            <table class="table table-striped table-condensed table-bordered">
-                <tr>
-                    <th class="text-right">Cita</th>
-                    <th class="text-right">Fecha</th>
-                    <th class="text-right">Hora</th>
-                    <th class="text-right">Persona</th>
-                </tr>
-                @foreach (var cita in Model)
-            {
-                    <tr>
-                        <td class="text-right">@cita.Folio</td>
-                        <td class="text-right">@cita.Fecha.ToShortDateString()</td>
-                        <td class="text-right">@cita.Hora_Inicio</td>
-                        <td class="text-right">@cita.Correo</td>
-
-                    </tr>
-                }
-            </table>
-        </div>
-
-        <div class="panel-footer">
-
-        </div>
     </div>
+</div>
 
 
