--- a/Horario/Horario.WebUI/Views/Cita/Edit.cshtml
+++ b/Horario/Horario.WebUI/Views/Cita/Edit.cshtml
@@ -21,19 +21,18 @@
             <h4>Hora inicio</h4><select name="Hora_Inicio" class="form-control"><option value="09:00:00">9 AM</option>
             <option value="10:00:00">10 AM</option><option value="11:00:00">11 AM</option><option value="12:00:00">11 PM</option>
             <option value="13:00:00">1 PM</option><option value="14:00:00">2 PM</option>
-            <option value="15:00:00">3 PM</option><option value="16:00:00">4 PM</option><option value="17:00:00">5 PM</option></select>
+            <option value="15:00:00">3 PM</option><option value="16:00:00">4 PM</option></select>
             <br />
-            <h4>Hora fin </h4><select name="Hora_Inicio" class="form-control">
-    <option value="09:00:00">9 AM</option>
-    <option value="10:00:00">10 AM</option>
-    <option value="11:00:00">11 AM</option>
-    <option value="12:00:00">11 PM</option>
-    <option value="13:00:00">1 PM</option>
-    <option value="14:00:00">2 PM</option>
-    <option value="15:00:00">3 PM</option>
-    <option value="16:00:00">4 PM</option>
-    <option value="17:00:00">5 PM</option>
-</select>
+            <h4>Hora fin </h4><select name="Hora_Fin" class="form-control">
+                <option value="10:00:00">10 AM</option>
+                <option value="11:00:00">11 AM</option>
+                <option value="12:00:00">12 PM</option>
+                <option value="13:00:00">1 PM</option>
+                <option value="14:00:00">2 PM</option>
+                <option value="15:00:00">3 PM</option>
+                <option value="16:00:00">4 PM</option>
+                <option value="17:00:00">5 PM</option>
+            </select>
 <br />
 
         </div>
