--- a/Horario/Horario.WebUI/Views/Cita/Index.cshtml
+++ b/Horario/Horario.WebUI/Views/Cita/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Panel de Citas";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_CitasLayout.cshtml";
 }
 
 <div class="panel panel-default">
