--- a/Horario/Horario.WebUI/Views/Shared/_Layout.cshtml
+++ b/Horario/Horario.WebUI/Views/Shared/_Layout.cshtml
@@ -17,6 +17,10 @@
            <!--Modificar después-->
         </div>
         <div class="col-xs-8">
+            @if (TempData["message"] != null)
+            {
+                <div class="alert alert-success">@TempData["message"]</div>
+            }
             @RenderBody()
         </div>
     </div>
